Screw it, let's print some proofs.

--- a/back.tex
+++ b/back.tex
@@ -81,7 +81,7 @@ producing a design faithful to the original cold metal type.
 
 {\fontspec[Ligatures=TeX, Scale=MatchLowercase]{Futura-Boo}URW Futura}
 makes a few guest appearances.
-Originally released in 1927 by Paul Renner,
+Designed by Paul Renner and originally released in 1927,
 Futura has found itself almost everywhere,
 from advertising and political campaigns to the moon.
 Douglas Thomas's recent history of the typeface,
