--- a/history.tex
+++ b/history.tex
@@ -28,18 +28,19 @@ expected.\punckern\endnote{Knuth, \textit{Digital Typography} (Stanford, 1999), 
 The average author would have resigned themselves to this change and moved on,
 but Knuth took great pride in print quality,
 especially for the mathematics in his books.
-Around this time, he discovered an exciting new technology:
+Around the same time, he discovered an exciting new technology:
 digital typesetting.
 Instead of working with metal or film,
 glyphs were built from tiny dots,
-often packed together at over 1,000 per inch.
+packed together at over 1,000 per inch.
 Inspired by this burgeoning tech and frustrated with the current state of affairs,
 Knuth set off on one of the greatest yak shaves\footnote{Programmers
 call seemingly unrelated work needed to solve their main problem
 ``yak shaving''\quotekern. The phrase is thought to originate from an episode
 of \textit{The Ren~\&~Stimpy Show}.\punckern\endnote{``yak shaving''\quotekern,
 \textit{The Jargon File},
-\http{www.catb.org/~esr/jargon/html/Y/yak-shaving.html}}}
+\href{http://www.catb.org/~esr/jargon/html/Y/yak-shaving.html}%
+{\texttt{www.catb.org/\~{}esr/jargon/html/Y/yak-shaving.html}}}}
 of all time.
 For years, he paused work on his books to create his own
 typesetting system.
