--- a/international.tex
+++ b/international.tex
@@ -47,7 +47,7 @@ When your document contains any languages besides English,
 consider using the \texttt{polyglossia} package.
 It will automatically:
 \begin{itemize}
-\item Load language-specific hyphenation patterns and other typographical
+\item Load language-specific hyphenations and other typographical
     conventions.
 \item Switch between user-specified fonts for each language.
 \item Translate document labels,
@@ -79,14 +79,14 @@ Dexter cried,
 \end{french}
 \end{lstlisting}
 \end{leftfigure}
-gives\footnote{Yes, it's \emph{omelette au fromage}.
-Direct all complaints to Cartoon Network.}
+gives
 \begin{leftfigure}
 \lm%
 Dexter cried,
 \begin{french}
 \lm%
-«Omelette du fromage!»
+«Omelette du\footnote{Yes, it's \emph{omelette au fromage}.
+Direct all complaints to Cartoon Network.} fromage!»
 \end{french}
 \end{leftfigure}
 
