--- a/micro.tex
+++ b/micro.tex
@@ -36,8 +36,8 @@ By default, \LaTeX{} justifies lines between perfectly straight
 left and right margins.
 This is the obvious choice,
 but falls victim to an annoying optical illusion:
-lines ending in small punctuation---like periods or
-commas---seem shorter than lines that
+lines ending in small glyphs---like periods, commas,
+or hyphens---seem shorter than lines that
 don't.\punckern\footnote{Many other optical illusions come up in typography.
 For example, if a circle, a square, and a triangle
 of equal heights are placed next to each other,
@@ -45,9 +45,11 @@ the circle and triangle look smaller than the square.
 For this reason, round or pointed characters (like O and A) must
 be made slightly taller than ``flat'' ones (such as H and T) for all
 to appear the same height.\punckern\endnote{%
-Jost Hochuli, \textit{Detail in typography} (Éditions~B42, 2015), 18--19}}
-\texttt{microtype} \introduce{protrudes} punctuation and other
-characters into the margins to compensate.
+Jost Hochuli, \textit{Detail in typography}
+(Éditions~\textsc{b}42, 2015),
+18--19}}
+\texttt{microtype} compensates by \introduce{protruding} these glyphs
+into the margins.
 
 \section{Font expansion}
 
@@ -59,11 +61,11 @@ You might think that distorting character shapes this way would be immediately
 noticeable,
 but you're reading a book that does this on every page!
 Font expansion is applied \emph{very} slightly---by default,
-character widths are changed by no more than two percent.\punckern\footnote{%
+character widths are altered by no more than two percent.\punckern\footnote{%
 Of course, you can use package options to change this limit,
 or disable the feature entirely.}
 
-Note that this feature isn't currently available with \XeLaTeX{}.
+That this feature isn't currently available for \XeLaTeX{}.
 You'll need to use \LuaLaTeX{} to take advantage of it.
 
 \section{What next?}
