--- a/punctuation.tex
+++ b/punctuation.tex
@@ -61,7 +61,7 @@ serve different purposes:
     \item They are used in phrasal adjectives.
         If I ask for ``five dollar bills''\punckern,
         do I want five \$1 bills, or several \$5 bills?
-        It's clearer that I mean the latter when set as
+        It's clearer that I mean the latter when typeset as
         \emph{five-dollar bills}.
     \end{itemize}
     In \LaTeX{}, they are produced with the hyphen key (\,\texttt{-}\,).
@@ -71,15 +71,15 @@ serve different purposes:
     They are set with two adjacent hyphens (\,\texttt{--}\,).
 
 \item[Em dashes] can be used to separate clauses of a sentence.
-    Other punctuation marks---like parenthesis or commas---play a similar
+    Other punctuation---like parenthesis or commas---play a similar
     role.
     They are set with three adjacent hyphens (\,\texttt{---}\,).
 
 \item[Minus signs] are used exclusively for negative quantities and
     mathematical expressions.
-    They are often similar in length to an en dash,
+    They are similar in length to an en dash,
     but sit at a different height.
-    They are set with the hyphen key when in a math environment
+    Minus signs are set with the hyphen key when in a math environment
     (see \chapref{math}), or with \verb|\textminus|.
 \end{description}
 
@@ -102,7 +102,7 @@ I'm\dots{} not sure.
 \section{Spacing}
 
 As we discovered in our first example,
-\LaTeX{} automatically inserts extra space between periods and whatever
+\LaTeX{} inserts more space between periods and whatever
 follows them---presumably the start of the next sentence.
 Sometimes, this isn't what we want!
 Consider honorifics like Mr.\ and Ms., for example.
@@ -139,7 +139,7 @@ Launch in 2\,h 10\,m.
 \section{What next?}
 \begin{itemize}
 \item Add hyphenations for uncommon words using \verb|\hyphenate|
-    or \verb|\-|.\punckern\footnote{\LaTeX{} usually does a good
+    or \verb|\-|\,.\punckern\footnote{\LaTeX{} usually does a good
     job of automatically hyphenating words, based on a dictionary of patterns
     stored for each language. You should rarely need these tools.}
 \item Learn other commands for spacing, such as \verb|\:|, \verb|\;|,
