--- a/installation.tex
+++ b/installation.tex
@@ -19,8 +19,7 @@ Each major operating system has its own \LaTeX{} distribution:
     and follow the instructions there to install it.
 
 \item[Windows] has Mik\TeX.
-    Install it from \https{miktex.org/download}
-    per the instructions there.
+    Install it from \https{miktex.org/download}.
     Mik\TeX{} offers the unique ability to automatically download
     additional packages if your document uses one that it can't find
     on your computer.
@@ -62,4 +61,4 @@ you can try online editors such as Share\LaTeX{} and Overleaf.
 This book won't focus on these web-based tools,
 but almost all of the same basics apply.
 (Of course, you have less control over certain aspects of online versions,
-such as the available fonts, the version of \LaTeX{} that's used, and so on.)
+such as available fonts, the version of \LaTeX{} that's used, and so on.)
