--- a/math.tex
+++ b/math.tex
@@ -1,7 +1,7 @@
 \chapter{Mathematics}
 \label{math}
 
-\LaTeX{} is excellent at typesetting mathematics, both inline with body text,
+\LaTeX{} excels at typesetting mathematics, both within body text,
 e.g., $x_n^2+y_n^2=r^2$, and as standalone formulas:
 \[\sum_{n=0}^{\infty} \frac{f^{(n)} (a)}{n!} (x - a)^n\]
 The former is created with \verb|$...$| or \verb|\(...\)|,
@@ -9,7 +9,7 @@ and the latter with \verb|\[...\]|.
 Inside these math environments, the rules of \LaTeX{} change:
 \begin{itemize}
 \item Most spaces and line breaks are ignored,
-    and the engine usually makes spacing decisions for you based on
+    and the engine makes spacing decisions for you based on
     typographical conventions for mathematics.
     \verb|$x+y+z$| and \verb|$x + y + z$| both give you $x+y+z$.
 \item Empty lines are not allowed---each formula occupies a single
