--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -2,10 +2,10 @@
 
 \section{Justification and alignment}
 
-\LaTeX{} is extraordinarily good at justifying text.
+\LaTeX{} justifies text outstandingly well.
 Instead of considering each line individually---as most word processors and
 web browsers do---it examines all possible line breaks in a given paragraph,
-then chooses ones that give the best overall
+then chooses those that give the best overall
 spacing.\punckern\endnote{Donald E.~Knuth and Michael F.~Plass,
 \textit{Breaking Paragraphs Into Lines} (Stanford, 1981)}
 Combined with its ability to automatically hyphenate words,
@@ -16,8 +16,8 @@ Franklin Mark Liang,
 this produces some of the best paragraph layouts available.
 
 But sometimes we don't want our text justified.
-If you would like it to be ``flush left''
-with a ragged right side, place it in a \texttt{flushleft} environment
+If you would like it to be flush left,
+place it in a \texttt{flushleft} environment
 or add \verb|\raggedright| to the current group.
 To center it, place it in a
 \texttt{center} environment or add \verb|\centering| to the current group.
@@ -113,7 +113,7 @@ produces
 \bigskip
 \noindent The \texttt{description} environment starts each item with some
 emphasized \introduce{label},
-then indents following lines:
+then indents lines that follow:
 \begin{leftfigure}
 \begin{lstlisting}
 \begin{description}
@@ -153,15 +153,15 @@ gives us
 
 \section{Columns}
 
-We often split layouts into multiple columns.
-This is especially common when printing on \textsc{a4} or \acronym{us} letter
-paper, since it allows more comfortable line widths at standard
+We often split layouts into several columns, especially when printing on
+\textsc{a4} or \acronym{us}~\textsc{l}etter paper,
+since it allows more comfortable line widths at standard
 8--12\,pt text sizes.\punckern\footnote{You'll see different advice depending
 on where you look, but a general rule of thumb is to design layouts to have
 fewer than 90 characters (including spaces) per line.
 Shorter lines keep readers from needing to scan very far to find the start of
-the next line,
-which produces a more comfortable experience.}
+the next line.
+This produces a more comfortable experience.}
 You can either add the \texttt{twocolumn} option to your document class,
 which splits everything in two, or you can use the \texttt{multicols}
 environment from the \texttt{multicol} package:
