--- a/why.tex
+++ b/why.tex
@@ -46,7 +46,7 @@ or ``lah-tech''}
 It's a program\footnote{And a markup language,
 and (sort of) a programming language.
 More on that later.}
-for crafting written documents, like papers, presentations,
+for crafting written documents, like essays, papers, presentations,
 or even the book you're reading right now.
 And unless you give Adobe large sums
 of money for InDesign or InCopy,
@@ -62,7 +62,7 @@ offering you the same tools used by professional designers and publishers.
 \section{\texorpdfstring{\LaTeX}{LaTeX}?}
 \LaTeX{} is an alternative to ``word processors'' like
 Microsoft Word, Apple Pages, Google Docs, and LibreOffice Writer.
-These other applications work on the principle of
+These other applications operate on the principle of
 \introduce{What You See Is What You Get} \acronym{(wysiwyg)},
 where what's on screen is the same as what comes out of your printer.
 \LaTeX{} is different. Here, documents are written as ``plain''
@@ -79,7 +79,7 @@ document to \LaTeX.
 \begin{lstlisting}
 \LaTeX{} is an alternative to ``word processors'' like
 Microsoft Word, Apple Pages, Google Docs, and LibreOffice Writer.
-These other applications work on the principle of
+These other applications operate on the principle of
 \introduce{What You See Is What You Get} \acronym{(wysiwyg)},
 where what's on screen is the same as what comes out of your printer.
 \LaTeX{} is different. Here, documents are written as ``plain''
@@ -116,9 +116,9 @@ However, it comes with a few advantages:
     %fighting with Word about how it wrapped text around images.}
 \clearpage
 
-\item You can define your own rules, then tweak them to instantly change
-    everywhere they're used in your document.
-    For instance, the \verb|\introduce| and \verb|\acronym| commands you saw above
+\item You can define your own rules, then tweak them to instantly adjust
+    everywhere they're used.
+    For instance, the \verb|\introduce| and \verb|\acronym| commands seen above
     are my own creations. The former \introduce{italicizes} text, and
     the latter sets words in \acronym{small caps} with a bit of extra
     \,\textsc{\addfontfeature{LetterSpace=15}letterspacing}\, so the characters
@@ -127,7 +127,7 @@ However, it comes with a few advantages:
     \textbf{\itshape with this look} and set acronyms
     {\small\addfontfeature{LetterSpace=6} LIKE THIS},
     I just change the two lines that define those commands,
-    and every place in the book that uses them is immediately updated.
+    and every place in this book that uses them is immediately updated.
 
 \item Since the document source is plain text,
     \begin{itemize}
@@ -157,13 +157,13 @@ changed since 1986.
 
 When \LaTeX{} was first released that year, none of the publishing technologies
 we use today existed.
-Adobe wouldn't debut their Portable Document Format for another seven years.
+Adobe wouldn't debut their Portable Document Format for seven more years.
 Digital printing was a new field, and desktop publishing was a fledgling
 curiosity.\punckern\endnote{\textit{Graphic Means:
 A History of Graphic Design Production}, directed by Briar Levit (2017)}
 This shows---badly---in most \LaTeX{} guides.
 If you look for instructions to change your document's font,
-you'll probably get swamped with bespoke nonsense.\punckern\footnote{%
+you'll get swamped with bespoke nonsense.\punckern\footnote{%
 Take all criticisms of \LaTeX's past here with a grain of
 salt. After all, the fact that all of the technology around it became
 obsolete---multiple times---is a testament to its staying power.}
@@ -179,7 +179,7 @@ This book will:
 \begin{enumerate}
 \item Teach you the fundamentals of \LaTeX.
 \item Point you to places where you can learn more.
-\item Show you how to use modern typesetting technologies with \LaTeX,
+\item Show you how to use modern typesetting technologies,
     like OpenType and microtypography.
 \item End promptly thereafter.
 \end{enumerate}
